基本功能的全部编写
