# treehole_backend/docs/swagger.json
@@ -52,6 +52,167 @@
                 }
             }
         },
+        "/comment/createComment": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "评论业务接口"
+                ],
+                "summary": "发送评论",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "发送参数",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/utils.CreateCommentFrom"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/comment/deleteNoteComment": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "评论业务接口"
+                ],
+                "summary": "删除评论",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "发送参数",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/utils.DeleteNoteCommentFrom"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/comment/getCommentList": {
+            "get": {
+                "tags": [
+                    "评论业务接口"
+                ],
+                "summary": "获取评论记录",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "size",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/comment/getNoteCommentList": {
+            "get": {
+                "tags": [
+                    "评论业务接口"
+                ],
+                "summary": "获取帖子评论列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "size",
+                        "name": "size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "node_identity",
+                        "name": "note_identity",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.H"
+                        }
+                    }
+                }
+            }
+        },
         "/forgetPassword/modifyPassword": {
             "post": {
                 "consumes": [
@@ -112,39 +273,6 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/utils.VerifyEmailCodeForm"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/utils.H"
-                        }
-                    }
-                }
-            }
-        },
-        "/getNoteInfo": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "公共接口"
-                ],
-                "summary": "获取帖子详细信息",
-                "parameters": [
-                    {
-                        "description": "发送参数",
-                        "name": "object",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/utils.GetNoteInfoFrom"
                         }
                     }
                 ],
@@ -287,6 +415,46 @@
                 }
             }
         },
+        "/note/getNoteInfo": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "帖子业务接口"
+                ],
+                "summary": "获取帖子详细信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "发送参数",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/utils.GetNoteInfoFrom"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.H"
+                        }
+                    }
+                }
+            }
+        },
         "/note/getNoteList": {
             "get": {
                 "tags": [
@@ -312,6 +480,86 @@
                         "description": "size",
                         "name": "size",
                         "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/note/modifyNote": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "帖子业务接口"
+                ],
+                "summary": "修改帖子",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "发送参数",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/utils.ModifyNoteForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/note/votedNote": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "帖子业务接口"
+                ],
+                "summary": "点赞或踩帖子",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "发送参数",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/utils.VotedNoteFrom"
+                        }
                     }
                 ],
                 "responses": {
@@ -615,6 +863,21 @@
         }
     },
     "definitions": {
+        "utils.CreateCommentFrom": {
+            "type": "object",
+            "required": [
+                "content",
+                "note_identity"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "note_identity": {
+                    "type": "string"
+                }
+            }
+        },
         "utils.CreateNoteForm": {
             "type": "object",
             "required": [
@@ -629,6 +892,21 @@
                     "type": "string"
                 },
                 "urls": {
+                    "type": "string"
+                }
+            }
+        },
+        "utils.DeleteNoteCommentFrom": {
+            "type": "object",
+            "required": [
+                "comment_identity",
+                "note_identity"
+            ],
+            "properties": {
+                "comment_identity": {
+                    "type": "string"
+                },
+                "note_identity": {
                     "type": "string"
                 }
             }
@@ -671,6 +949,28 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "utils.ModifyNoteForm": {
+            "type": "object",
+            "required": [
+                "content",
+                "note_identity",
+                "title"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "note_identity": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "urls": {
                     "type": "string"
                 }
             }
@@ -785,6 +1085,25 @@
                     "type": "string"
                 },
                 "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "utils.VotedNoteFrom": {
+            "type": "object",
+            "required": [
+                "flag",
+                "note_identity",
+                "voted"
+            ],
+            "properties": {
+                "flag": {
+                    "type": "string"
+                },
+                "note_identity": {
+                    "type": "string"
+                },
+                "voted": {
                     "type": "string"
                 }
             }
